[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid"]
